force-app/main/default/objects/Mailshot__c/Mailshot__c.object-meta.xml
<CustomObject>
    <label>Mailshot</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0}</displayFormat>
        <label>Mailshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mailshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>