force-app/main/default/objects/Mailshot__c/fields/HTML_Body__c.field-meta.xml
<CustomField>
    <fullName>HTML_Body__c</fullName>
    <label>HTML Body</label>
    <length>131000</length>
    <type>Html</type>
</CustomField>