force-app/main/default/objects/Mailshot__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Job</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Mailshots</relationshipLabel>
    <relationshipName>Mailshots</relationshipName>
    <type>Lookup</type>
</CustomField>