force-app/main/default/objects/Mailshot__c/fields/Send_Standard__c.field-meta.xml
<CustomField>
    <fullName>Send_Standard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Standard</label>
    <type>Checkbox</type>
</CustomField>