force-app/main/default/objects/Mailshot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Job__c</columns>
    <columns>Type__c</columns>
    <columns>Sent_At__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>