force-app/main/default/objects/Mailshot__c/listViews/Candidate_Mailshots.listView-meta.xml
<ListView>
    <fullName>Candidate_Mailshots</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Job__c</columns>
    <columns>Type__c</columns>
    <columns>Sent_At__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Candidate</value>
    </filters>
    <label>Candidate Mailshots</label>
</ListView>